--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- interest section -->
     <div class="interest">
-      <div class="container-fluid mr0"> 
+      <div class="container-fluid mr0">
         <div class="row">
           <div class="col-12">
             <div class="card  mr0">
@@ -100,7 +100,7 @@
                     <input
                       type="text"
                       name=""
-                      id=""
+                      id="name"
                       placeholder="Name"
                       class="  m-4"
                     />
@@ -109,20 +109,27 @@
                     <input
                       type="text"
                       placeholder="Street Name"
-                      class="  m-4"
+                      class="m-4"
+                      id="street"
                     /><br />
                     <i class="fas fa-beer fa-2x orange"></i>
                     <input
                       type="number"
                       placeholder="Age"
-                      class="  m-4"
+                      class="m-4"
+                      id="age"
                     /><br />
                     <i class="fas fa-wrench fa-2x orange"></i>
-                    <input type="text" placeholder="Vehicle" class="  m-4" />
+                    <input
+                      type="text"
+                      placeholder="Vehicle"
+                      class="  m-4"
+                      id="vehicle"
+                    />
                     <br />
-                    <a href="race.html"
-                      ><button type="button" class="btn">Race</button></a
-                    >
+                    <button type="button" class="btn" onclick="register()">
+                      Race
+                    </button>
                   </form>
                 </div>
               </div>
@@ -134,5 +141,13 @@
         </div>
       </div>
     </div>
+    <!-- link javascript files -->
+
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.js"
+      integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
