--- a/race.html
+++ b/race.html
@@ -31,7 +31,7 @@
                                         <img src="images/drag.jpg" class="card-img" alt="drag image">
                                     </div>
                                     <div class="col-md-8">
-                                        <div class="card-body">
+                                        <div class="card-body shadow">
                                             <h5 class="card-title">drag-race</h5>
                                             <p class="card-text">This is a wider card with supporting text below as a
                                                 natural lead-in to additional content. This content is a little bit
@@ -53,7 +53,7 @@
                                         <img src="images/circuit2.jpeg" class="card-img" alt="red-car">
                                     </div>
                                     <div class="col-md-8">
-                                        <div class="card-body">
+                                        <div class="card-body shadow">
                                             <h5 class="card-title">circuit-race</h5>
                                             <p class="card-text">This is a wider card with supporting text below as a
                                                 natural lead-in to additional content. This content is a little bit
@@ -75,7 +75,7 @@
                                         <img src="images/sprint8.jpeg" class="card-img" alt="yellow-color">
                                     </div>
                                     <div class="col-md-8">
-                                        <div class="card-body">
+                                        <div class="card-body shadow">
                                             <h5 class="card-title">sprint race</h5>
                                             <p class="card-text">This is a wider card with supporting text below as a
                                                 natural lead-in to additional content. This content is a little bit
@@ -93,8 +93,9 @@
                 </div>
 
             </div>
-            <div class="col-6">
-                <img src="images/Bima2_.jpeg" alt="bmw" width="500" height="700">
+            <div class="col-6 timer">
+                <p id="demo"></p>
+                
             </div>
         </div>
 
@@ -273,7 +274,7 @@
             </div>
         </div>
     </div>
-
+<script src="js/main.js"></script>
 </body>
 
 </html>
