add toggle part but shows all races

--- a/race.html
+++ b/race.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/main.js"></script>
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Autour+One|Fontdiner+Swanky|Nosifer|Orbitron|UnifrakturMaguntia|Volkhov|Wallpoet&display=swap" rel="stylesheet">
@@ -68,6 +71,7 @@
                         </div>
                     </div>
                     <!-- Sprint Race -->
+                    <div class="sprints">
                     <div class="row">
                         <div class="col-12">
                             <div class="card mb-3" style="max-width: 540px;">
@@ -89,6 +93,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
 
 
                 </div>
