--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                       id="vehicle"
                     />
                     <br />
-                    <button type="button" class="btn" onclick="register()">
+                    <button type="button" class="btn" onclick="register()" href ="" id="regbtn">
                       Race
                     </button>
                   </form>
