accepted change in css, index and race

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="row no-gutters">
                 <div class="col-md-4">
                   <img
-                    src="images/interest.jpeg"
+                    src="images/Bima.jpeg"
                     class="card-img "
                     alt="interest"
                     height="310vh"
