--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <!-- interest section -->
     <div class="interest">
       <div class="container-fluid mr0">
-        <div class="row">
+        <d kardbody 
+        iv class="row">
           <div class="col-12">
             <div class="card  mr0">
               <div class="row no-gutters">
